<resources>
    <string name="app_name">LocalMusicPlayer</string>
    <string name="shuffleBtn">Shuffle</string>
    <string name="favoriteBtn">Favorites</string>
    <string name="playListBtn">PlayLists</string>
    <string name="total_songs">Total songs</string>
    <string name="world_of_music">World of Music</string>
    <string name="song_name">Song name</string>
    <string name="back_btn">Back</string>
    <string name="start_tv">00:00</string>
    <string name="end_tv">Loading</string>
    <string name="repeatBtn">Repeat</string>
    <string name="equalizerBtn">Equalizer</string>
    <string name="timerBtn">Timer</string>
    <string name="shareBtn">Share</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="app_icon">Icon</string>
    <string name="text_nav">Welcome to \nMusic Player</string>
    <string name="feedback">Feedback</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="song_album">Song Album</string>
</resources>