<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".PlayerActivity">

    <!--    First Row-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/backBtnBA"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="5dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back_btn"
            android:src="@drawable/arrow_back_icon"
            app:tint="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/world_of_music"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/favoriteBtn"
            android:src="@drawable/favorite_empty_icon"
            app:tint="@android:color/holo_red_dark" />

    </LinearLayout>

    <!--    Current Song Image-->

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/songImgPA"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/splash_screen"
        app:shapeAppearanceOverlay="@style/curved"
        app:strokeWidth="5dp" />


    <!--    Current Song name-->
    <TextView
        android:id="@+id/songNamePA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/song_name"
        android:textColor="@color/black"
        android:textSize="18dp" />

    <!--    Direction Button-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <!--        PREVIOUS BUTTON-->
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/previousBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/arrow_back_icon"
            app:iconSize="40dp" />


        <!--        PLAY AND PAUSE BUTTON-->
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/playPauseBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:backgroundTint="@android:color/holo_red_light"
            app:icon="@drawable/pause_icon"
            app:iconSize="50dp"
            app:iconTint="@color/white"
            app:shapeAppearanceOverlay="@style/curved" />


        <!--        NEXT BUTTON-->
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/nextBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/arrow_forward_icon"
            app:iconSize="40dp" />

    </LinearLayout>

    <!--    SeekBar-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/seekbarPAStart"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/start_tv"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/seekbarPA"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/seekbarPAEnd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/end_tv"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </LinearLayout>

    <!--    Function Button-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/repeatBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/repeatBtn"
            android:src="@drawable/repeat_icon"
            app:tint="@color/cool_pink" />

        <ImageButton
            android:id="@+id/shuffleBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/shuffleBtn"
            android:src="@drawable/shuffle_icon"
            app:tint="@color/cool_pink" />

        <ImageButton
            android:id="@+id/equalizerBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/equalizerBtn"
            android:src="@drawable/graphic_eq_icon"
            app:tint="@color/cool_pink" />

        <ImageButton
            android:id="@+id/timerBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/timerBtn"
            android:src="@drawable/timer_icon"
            app:tint="@color/cool_pink" />

        <ImageButton
            android:id="@+id/shareBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/shareBtn"
            android:src="@drawable/share_icon"
            app:tint="@color/cool_pink" />

    </LinearLayout>

</LinearLayout>